--- a/BlazorApp3/Client/Pages/Contact.razor
+++ b/BlazorApp3/Client/Pages/Contact.razor
@@ -8,6 +8,8 @@
 
   <div>@mess </div> *@
 
+<PageTitle>Contact Us</PageTitle>
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
