--- a/BlazorApp3/Client/Pages/DeleteMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/DeleteMovieAdmin.razor
@@ -1,33 +1,7 @@
 ﻿<h3>DeleteMovieAdmin</h3>
 @page "/DeleteMovieAdmin/{Id}"
 @attribute [Authorize(Roles ="Admin")]
-@*<div></div>
-@if (movie == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/>
-    MovieId
-    <InputText   @bind-Value="@movie.MovieId" /><br>
-    StudioId
-    <InputText  @bind-Value="@movie.StudioId"/><br>
-    MovieGenre
-    <InputText  @bind-Value="@movie.MovieGenre"/><br>
-    MovieName
-    <InputText  @bind-Value="@movie.MovieName"/><br>
-    PremiereDate
-    <InputDate  @bind-Value="@movie.PremiereDate"/><br>
-
-    <button type="submit">Delete</button>
-</EditForm>
-<div>@content</div>
-}*@
+<PageTitle>Admin - Delete Movie</PageTitle>
 
 <head>
     <meta charset="utf-8">
