--- a/BlazorApp3/Client/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/EditMovieAdmin.razor
@@ -1,6 +1,6 @@
 ﻿
 @page "/EditMovieAdmin/{Id}"
-
+<PageTitle>Admin - Edit Movie</PageTitle>
 @using System.IO
 @using Firebase.Storage
 @attribute [Authorize(Roles ="Admin")]
