--- a/BlazorApp3/Client/Pages/EditMovieStudio.razor
+++ b/BlazorApp3/Client/Pages/EditMovieStudio.razor
@@ -3,6 +3,7 @@
 @using Firebase.Storage
 @attribute [Authorize(Roles ="Studio")]
 @page "/EditMovieStudio/{Id}"
+<PageTitle>Studio - Edit Movie</PageTitle>
 
 @*<div></div>
 @if (movie == null)
