--- a/BlazorApp3/Client/Pages/Login.razor
+++ b/BlazorApp3/Client/Pages/Login.razor
@@ -1,7 +1,7 @@
 ﻿@inject IJSRuntime JS
 @inject IAccountService _accountService;
 @page "/login"
-
+<PageTitle>MovieTV - Sign in or Register</PageTitle>
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
