--- a/BlazorApp3/Client/Pages/MovieStudio.razor
+++ b/BlazorApp3/Client/Pages/MovieStudio.razor
@@ -1,6 +1,7 @@
 ﻿@page "/MovieStudio"
 @attribute [Authorize(Roles = "Studio")]
 @using Firebase.Storage
+<PageTitle>Studio - Movie Management</PageTitle>
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -111,74 +112,79 @@ else
     <button class="btn btn-primary" @onclick="LoadMore">More...</button>
 }
 @code{
-            private List<MovieModel> movies = new();
-        private int index = 0;
-        private string? searchString { get; set; }
+    private List<MovieModel> movies = new();
+    private int index = 0;
+    private string? searchString { get; set; }
 
-        private bool isSearch = false;
-        private string sort = null;
-        private readonly Dictionary<string, string> DicImageLink = new();
-        private async Task NameSortParm()
-        {
-            index = 0;
-            sort = sort == "name" ? "nameDesc" : "name";
-            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
-            isSearch = false;
-            searchString = null;
-        }
+    private bool isSearch = false;
+    private string sort = null;
+    private readonly Dictionary<string, string> DicImageLink = new();
+    private async Task NameSortParm()
+    {
+        index = 0;
+        sort = sort == "name" ? "nameDesc" : "name";
+        movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
+        isSearch = false;
+        searchString = null;
+    }
 
-        private async Task DateSortParm()
-        {
-            index = 0;
-            sort = sort == "date" ? "dateDesc" : "date";
-            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
-            isSearch = false;
-            searchString = null;
-        }
+    private async Task DateSortParm()
+    {
+        index = 0;
+        sort = sort == "date" ? "dateDesc" : "date";
+        movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
+        isSearch = false;
+ searchString = null;
+    }
 
-        private async Task GenreSortParm()
-        {
-            index = 0;
-            sort = sort == "genre" ? "genreDesc" : "genre";
-            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
-            isSearch = false;
-            searchString = null;
-        }
+    private async Task GenreSortParm()
+    {
+        index = 0;
+        sort = sort == "genre" ? "genreDesc" : "genre";
+        movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ /{sort}/{index}");
+        isSearch = false;
+        searchString = null;
+    }
 
-        protected override async Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
+    {
+        Task? moviesTask = Task.Run(async () =>
         {
-            Task? moviesTask = Task.Run(async () =>
+            movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ / /{index}");
+        });
+        char[] tokena = { };
+        Task? tokenaTask = Task.Run(async () =>
+        {
+            tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
+        });
+        await Task.WhenAll(moviesTask, tokenaTask);
+        string token = new string(tokena);
+        //FIX
+        Parallel.ForEach(movies, async item =>
+        {
+            try
             {
-                movies = await _httpClient.GetFromJsonAsync<List<MovieModel>>($"Studio/Index/ / /{index}");
-            });
-            char[] tokena = { };
-            Task? tokenaTask = Task.Run(async () =>
-            {
-                tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
-            });
-            await Task.WhenAll(moviesTask, tokenaTask);
-            string token = new string(tokena);
-            foreach (MovieModel item in movies)
-            {
-                try
+                string ImageLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(item.StudioId).Child(item.MovieId).Child("Image").GetDownloadUrlAsync();
+                if (!DicImageLink.ContainsKey(item.MovieId))
                 {
-                    string ImageLink = await new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(item.StudioId).Child(item.MovieId).Child("Image").GetDownloadUrlAsync();
-                    if (!DicImageLink.ContainsKey(item.MovieId))
-                    {
-                        DicImageLink.Add(item.MovieId, ImageLink);
-                    }
-                    else
-                    {
-                        DicImageLink[item.MovieId] = ImageLink;
-                    }
+                    DicImageLink.Add(item.MovieId, ImageLink);
+                    StateHasChanged();
                 }
-                catch
+                else
                 {
-                    DicImageLink.Add(item.MovieId, null);
+                    DicImageLink[item.MovieId] = ImageLink;
+                    StateHasChanged();
                 }
             }
-        }
+            catch
+            {
+                DicImageLink.Add(item.MovieId, null);
+                StateHasChanged();
+            }
 
+        });
+    }
+    //ENDFIX
         private async Task Search()
         {
             index = 0;
@@ -213,6 +219,7 @@ else
             }
         }
 }
+
 
 
 
