--- a/BlazorApp3/Client/Pages/SalaryStudio.razor
+++ b/BlazorApp3/Client/Pages/SalaryStudio.razor
@@ -1,5 +1,6 @@
 ﻿<h3>SalaryStudio</h3>
 @page "/SalaryStudio"
+<PageTitle>Studio - Salary</PageTitle>
 
 @attribute [Authorize(Roles = "Studio")]
 @using System.Text.RegularExpressions
