--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -1,6 +1,7 @@
 ﻿<h3>StatusStudio</h3>
 @attribute [Authorize(Roles = "Studio")]
 @page "/StatusStudio/{Id}"
+<PageTitle>Studio - Status</PageTitle>
 
 @*@if(commentStatus.Count < 1)
     {
