--- a/BlazorApp3/Client/Pages/AdminAccountManagement.razor
+++ b/BlazorApp3/Client/Pages/AdminAccountManagement.razor
@@ -1,6 +1,6 @@
 ﻿@page "/AdminAccountManagement"
 @attribute [Authorize(Roles = "Admin")]
-
+<PageTitle>Admin - Account Management</PageTitle>
 <head>
 	<meta charset="UTF-8">
 	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
