--- a/BlazorApp3/Client/Pages/CreateStudio.razor
+++ b/BlazorApp3/Client/Pages/CreateStudio.razor
@@ -2,6 +2,8 @@
 @attribute [Authorize(Roles = "Studio")]
 @page "/CreateStudio"
 
+<PageTitle>Create Movie</PageTitle>
+
 @*<EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
     <ValidationSummary />
