--- a/BlazorApp3/Client/Pages/Home.razor
+++ b/BlazorApp3/Client/Pages/Home.razor
@@ -1,41 +1,8 @@
 ﻿@page "/home"
 @inject HttpClient Http
 
-@*<h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
-
-@if (forecasts == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}*@
-
+<PageTitle>MovieTV</PageTitle>
 
 <head>
     <meta charset="utf-8">
@@ -117,6 +84,7 @@ else
 
 @code {
     private WeatherForecast[] forecasts;
+    
     protected override async Task OnInitializedAsync()
     {
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
