--- a/BlazorApp3/Client/Pages/MovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/MovieAdmin.razor
@@ -1,48 +1,6 @@
 ﻿@page "/MovieAdmin"
 @attribute [Authorize(Roles = "Admin")]
-@*<input placeholder="Enter your text" @bind-value="@searchString" />
-
-	<button class="btn btn-primary" @onclick="OnInitializedAsync">Search</button>
-
-	@if(movies == null)
-	{
-	<div>Loading</div>
-	}
-	else
-	{
-	<table class="table">
-	<thead>
-	<tr>
-	<th>MovieId</th>
-
-	<th>StudioId</th>
-	<th><button class="btn btn-primary" @onclick="GenreSortParm">MovieGenre</button></th>
-	<th><button class="btn btn-primary" @onclick="NameSortParm">MovieName</button></th>
-	<th><button class="btn btn-primary" @onclick="DateSortParm">PremiereDate</button></th>
-	<th></th>
-	<th></th>
-	</tr>
-	</thead>
-	<tbody>
-	@foreach (var item in movies)
-	{
-	<tr>
-	<td>@item.MovieId</td>
-
-	<td>@item.StudioId</td>
-	<td>@item.MovieGenre</td>
-	<td>@item.MovieName</td>
-	<td>@item.PremiereDate.ToShortDateString()</td>
-	@{ var linkEdit = $"EditMovieAdmin/{item.MovieId}"; var linkBan = $"DeleteMovieAdmin/{item.MovieId}";}
-	<td><NavLink class="nav-link" href="@linkEdit">Edit</NavLink></td>
-	<td><NavLink class="nav-link" href="@linkBan">Delete</NavLink> </td>
-	</tr>
-	}
-	</tbody>
-	</table>
-	<button @onclick="LoadMore">Click to load more</button>
-
-	}*@
+<PageTitle>Admin - Movie Management</PageTitle>
 
 <head>
 	<meta charset="UTF-8">
@@ -225,7 +183,7 @@
 </body>
 
 @code{
-	        private List<MovieModel> movies = new();
+	    private List<MovieModel> movies = new();
         private int index = 0;
         private string? searchString { get; set; }
 
