--- a/BlazorApp3/Client/Pages/WatchCustomer.razor.css
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor.css
@@ -3,6 +3,95 @@
     background: #fff;
 }
 
+
+.project {
+    margin: 15px 0;
+}
+
+.no-gutter .project {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.has-spacer {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.has-spacer-extra-space {
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+.has-side-spacer {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.project-title {
+    font-size: 1.25rem;
+}
+
+.project-skill {
+    font-size: 0.9rem;
+    font-weight: 400;
+    letter-spacing: 0.06rem;
+}
+
+.project-info-box {
+    margin: 15px 0;
+    background-color: #fff;
+    padding: 30px 40px;
+    border-radius: 5px;
+}
+
+    .project-info-box p {
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid #d5dadb;
+    }
+
+        .project-info-box p:last-child {
+            margin-bottom: 0;
+            padding-bottom: 0;
+            border-bottom: none;
+        }
+
+.mr-5 {
+    margin-right: 5px !important;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.btn-circle {
+    border-radius: 50% !important;
+}
+
+.project-info-box p {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #d5dadb;
+}
+
+p {
+    font-family: "Barlow", sans-serif !important;
+    font-weight: 300;
+    font-size: 1rem;
+    color: #686c6d;
+    letter-spacing: 0.03rem;
+    margin-bottom: 10px;
+}
+
+b,
+strong {
+    font-weight: 700 !important;
+}
+
+
 /* My Account */
 .payments-item img.mr-3 {
     width: 47px;
@@ -149,3 +238,4 @@ h6 {
 a:hover {
     text-decoration: none;
 }
+
